# NNforHJB

./: .gitignore  CLAUDE.md  CONTEXT.md  Makefile  OpenLoop.py  OpenLoop_BVP.py  PDAPmultisemidiscrete.py  ProblemNN2D.py  README.md  VDP_beta_3_fixed_points.npy  VDP_beta_3_grid_30x30_complete.npy  VDP_beta_3_remaining_failed.npy  VDP_beta_3_remaining_failed_1.npy  data cleaning.py  debug_gradient_zero.py  debug_stereo_shape.py  discretization.py  experiment_result1_sol(1, 2).csv  greedy_insertion.py  main.py  network.py  network_outerweights.py  network_torch.py  numpy_reduction_ops.py  openloop_legendre.py  openloop_new.py  plan.md  post_processing.py  pyproject.toml  requirements.txt  sample3, ntime = 1000.npy  setup.py  test1.py  test_VDP.py  test_gradient.py  test_insertion.py  test_stereo.py  test_stereo_fixed.py  test_stereographic.py  train_history-1.pt  (+108 more)
activation_search/: README.md  SUMMARY.md  aggregate.py  analyze_gamma_effect.py  analyze_gamma_pattern.py  gamma_pattern_check.md  plot_pareto.py  program.md
autoresearch/: README.md
conf/: config.yaml
data/: VDP_beta_3_failed_ini.npy  VDP_beta_3_patch1.npy  VDP_legendre_plot.pickle  data cleaning.py  data exploration.py  data_vdp_legendre_beta=3.npy  data_vdp_pw_beta = 3.npy
data_result/: VDP_3D_value_function.pickle  VDP_beta_0.1_failed_ini_30x30.npy  VDP_beta_0.1_grid_30x30.npy  VDP_beta_3_fixed_points_1.npy  VDP_beta_3_grid_30x30.npy  data cleaning.py  post_processing.py
daten/: experiment_result1_sol(1, 2).csv  experiment_result1_sol(1.5, 1.5).csv  experiment_result2_G.csv
deploy/: README.md
docs/: research-directions.md
logs/: 2025-02-15.md
models/: experiment_1.pkl  (+122 more)
(+1100 files in other folders)
