[project]
name = "nnforhjb"
version = "0.1.0"
description = "Sparse neural network training for Hamilton-Jacobi-Bellman equations"
requires-python = ">=3.12"
dependencies = [
    # Core scientific computing
    "numpy>=2.2",
    "scipy>=1.15",
    # Deep learning
    "torch>=2.6",
    # Machine learning
    "scikit-learn>=1.6",
    # Data analysis
    "pandas>=2.2",
    # Visualization
    "matplotlib>=3.10",
    # Logging
    "loguru>=0.7",
    # Jupyter
    "jupyter>=1.1",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
